added compactBannerTooltips added endPlatformSillyString added sneakingRandomTickChance
re-added TinkerKit modifiable warnings by capturing blockstate locals instead of finding the blockstate by world pos
replaced the old buggy randomTick logger to one that prints information similar to the explosions logger
removed renderers due to some major bugs i don't see myself fixing soon
falling mangrove propagules no longer set themselves to the standing variant immediately. they now hang as normal until they touch the ground, when they will place as a standing variant
fixed a bunch of issues with campfireRespawning
updated to 1.21
changed a lot of static TinkerKit functions into instanced functions on TinkerKit.Type